static/css/base.css
html {
  position: relative;
  min-height: 100%;
}
#bootstrap-overrides .pagination a{
   color: #008595; 
}
#wrap{
  /*font-family: 'Play', sans-serif;*/
	margin-bottom: 15%;
}
#jumbo{
                    background-image: url("../images/cooking-header.jpeg");
                    background-repeat: no-repeat;
                    background-size: cover;
                    color: white;
                    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
                    
                    }
#bootstrap-overrides {
      margin-bottom: 100px; /* Margin bottom by footer height */
}                   

.content{
    position: relative;
    background-color: #EFE1CE;
    border-radius: 10px;
    overflow-y: scroll;
    
}  
#bootstrap-overrides .lovely-color{
    
    color: #008595;
}
#footer{
    background-color: #ADBCA5;
  	position: absolute;
	 text-align: center;
	 width: 100%;
	 bottom: 0;
	 font-size: 0.7em;
}

.handwritten{
    
    font-family: 'Lobster', cursive;
}

#footer a{
  
  color: black;
}
#footer .container-fluid{
    
  background-color: #ADBCA5;
}
               
#bootstrap-overrides .navbar {
    font-family: 'Nunito', sans-serif;
    background-color: #ADBCA5;
    border: none;
}
#bootstrap-overrides .pagination{
    font-family: 'Nunito', sans-serif;
    background-color: #ADBCA5;
    border: none;
}

.info-label{
    font-size: 0.7em;
}
.index-card{
    width: 15rem;
}
#bootstrap-overrides form{
    
  font-family: 'Roboto', sans-serif;  
}

@media (min-width: 992px) {
.resp-card{
    width: 18rem;
}
#b1, #b2{
    display: none;
}
.show-on-large{
    display: block;
}

.nomore{
    height: 230;
    
}
.content{
    max-height: 600px;
}
 }

@media (max-width: 991.98px) {
.nomore{
    height: 300;
    
}
#bootstrap-overrides nav {
    font-size: 1.5em;
}

.resp-card{
    width: 28rem;
}
.content{
    max-height: 400px;
}
}

